# acpi-volumed

./: Makefile.am  acpi-volumed  acpi-volumed.c  alsa_vol_example.c  configure.ac
debian/: README.Debian  README.source  acpi-volumed.cron.d.ex  acpi-volumed.doc-base.EX  acpi-volumed.user.service  changelog  control  copyright  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
src/: Makefile.am  acpi-volumed.c
systemd/: Makefile.am  acpi-volumed.service
